compiler/src/test/resources/amyc/nameAnalyzer/passing/DuplicateClassParams.amy
object ClassParams
  abstract class Foo
  case class Bar(v: Int, v: Int) extends Foo
end ClassParams
