compiler/src/test/resources/amyc/nameAnalyzer/failing/DuplicateDefs1.amy
module DefNames
  abstract class Foo
  case class Foo() : Foo
end DefNames
